# tofu

./: .buildinfo  .coveragerc  .gitignore  .nfs0000000000d426850014914e  .noseids  .travis.yml  :  Auto_tofu.plugins.html  Autodoc.html  CLASSIFIERS.txt  Cython_speedup_notes.ipynb  Dependencies.html  LICENSE  LICENSE.txt  MANIFEST.in  MANIFEST.txt  README.md  README.rst  TFG_CoilPF_ExpWEST_Bl_sh00000.npz  TFG_CoilPF_ExpWEST_Bl_sh00000_Vers1.3.23-38-g94bc3be.npz  TFG_CoilPF_ExpWEST_Bu_sh00000.npz  TFG_CoilPF_ExpWEST_Bu_sh00000_Vers1.3.23-38-g94bc3be.npz  TFG_CoilPF_ExpWEST_CoilCS_sh00000.npz  TFG_CoilPF_ExpWEST_CoilCS_sh00000_Vers1.3.23-38-g94bc3be.npz  TFG_CoilPF_ExpWEST_Dl_sh00000.npz  TFG_CoilPF_ExpWEST_Dl_sh00000_Vers1.3.23-38-g94bc3be.npz  TFG_CoilPF_ExpWEST_Du_sh00000.npz  TFG_CoilPF_ExpWEST_Du_sh00000_Vers1.3.23-38-g94bc3be.npz  TFG_CoilPF_ExpWEST_El_sh00000.npz  TFG_CoilPF_ExpWEST_El_sh00000_Vers1.3.23-38-g94bc3be.npz  TFG_CoilPF_ExpWEST_Eu_sh00000.npz  TFG_CoilPF_ExpWEST_Eu_sh00000_Vers1.3.23-38-g94bc3be.npz  TFG_CoilPF_ExpWEST_Fl_sh00000.npz  TFG_CoilPF_ExpWEST_Fl_sh00000_Vers1.3.23-38-g94bc3be.npz  TFG_CoilPF_ExpWEST_Fu_sh00000.npz  TFG_CoilPF_ExpWEST_Fu_sh00000_Vers1.3.23-38-g94bc3be.npz  TFG_CoilPF_ExpWEST_LowDiv1-1_sh00000.npz  TFG_CoilPF_ExpWEST_LowDiv1-1_sh00000_Vers1.3.23-38-g94bc3be.npz  TFG_CoilPF_ExpWEST_LowDiv1-2_sh00000.npz  TFG_CoilPF_ExpWEST_LowDiv1-2_sh00000_Vers1.3.23-38-g94bc3be.npz  (+159 more)
tofu/: __init__.py  _plot.py  _version.py  defaults.py  draft_notes.py  helper.py  meson.build  pathfile.py  setup.py  utils.py  version.py  version.txt
tofu/Eq/: __init__.py  _plot.py
tofu/benchmarks/: __init__.py  asv.conf.json  benchmarks.py  benchmarks_00_Geometry_peakmem.py  benchmarks_00_Geometry_time.py  benchmarks_01_Mesh2D_peakmem.py  benchmarks_01_Mesh2D_time.py  benchmarks_02_spectralfit_peakmem.py  benchmarks_02_spectralfit_time.py  benchmarks_03_solidangles.py  benchmarks_Geometry.py  benchmarks_Mesh2D.py
tofu/benchmarks/results/: benchmarks.json
tofu/data/: _DataCollection_Axes_class.py  _DataCollection_Base_class.py  _DataCollection_check_inputs.py  _DataCollection_class.py  _DataCollection_class0_Base.py  _DataCollection_class1_interactivity.py  _DataCollection_class2_plots.py  _DataCollection_comp.py  _DataCollection_interactivity.py  _DataCollection_plot.py  _DataCollection_plot_as_array.py  _DataCollection_plot_misc.py  _DataCollection_plot_text.py  _DataCollection_utils.py  __init__.py  _bsplines_utils.py  _check_inputs.py  _class00_Config.py  _class00_poly2d_check.py  _class00_poly2d_sample.py  _class01_Plasma2D.py  _class01_compute.py  _class01_eqdsk.py  _class01_load_equilibrium.py  _class01_load_from_eqdsk.py  _class01_load_from_meq.py  _class01_meq.py  _class02_Rays.py  _class02_angle_vs_vect.py  _class02_sample.py  _class02_save2stp.py  _class02_single_point_camera.py  _class02_tangency_radius.py  _class02_touch.py  _class03_Aperture.py  _class03_save2stp.py  _class04_Filter.py  _class05_Crystal.py  _class05_legacy.py  _class06_Grating.py  (+165 more)
tofu/dumpro/: Foreground.avi  Grayscale.avi  Rapport de stage.docx  Reliability database.xlsx  Testcode_1.py  Testvideo_image.py  __background_removal.py  __colorgray.py  __image_2_array.py  __init__.py  __video_to_img.py  __video_to_imgver2.py  _comp.py  _comp_clusters.py  _core.py  _def.py  _draft.py  _plot.py  _stabilize.py  background_removal.py  background_removalv2.py  image_2_array.py
tofu/dumpro/Videos/: 51513_RE_impact.mat  CCD33174_K1.MPG  FAST43493_Runaway_impact.mpg  KSTAR_003723_tv01.avi  KSTAR_013101_tv02_inj01.avi  TS_46313_tg1.avi
tofu/dumpro/computation/: Video_to_array.py  __background_removal.py  __init__.py  __slicing.py  __slicing_test.py  background_removal.py  binarythreshold.py  cluster_det.py  cluster_tracking.py  colorgray.py  comp.py  edge_detection.py  find_clusters.py  image_to_video.py  playvideo.py  (+3 more)
tofu/dust/: ._comp.py.swp  ._core.py.swp  __init__.py  _comp.py  _core.py  _plot.py
tofu/entrypoints/: _def.py  tofucalc.py  tofuplot.py
tofu/geom/: Benchmark_GG.py  GG.py  GG02.pyx  General_Geom_cy.pyx  Stats_TimeLOSPInOut.npz  _GG.py  _GG.pyx  _GG02.pyx  _GG02_LM.pyx  _GG03.pyx  _GG03_LM.html  _GG03_LM.pyx  _GG_LM.py  __init__.py  _basic_geom_tools.pxd  _basic_geom_tools.pyx  _chained_list.pxd  _chained_list.pyx  _check_optics.py  _comp.py  _comp_optics.py  _comp_solidangles.py  _compute.py  _core.py  _core02.py  _core_Optics.py  _core_optics.py  _def.py  _def_config.py  _defaults.py  _distance_tools.pxd  _distance_tools.pyx  _etendue.py  _fast_sum.c  _geom_sampling.pxd  _geom_sampling.pyx  _openmp_tools.pxd  _openmp_tools.pyx  _plot.py  _plot_old.py  (+22 more)
tofu/imas2tofu/: _Plasma2DLoader.py  __init__.py  _comp.py  _comp_mesh.py  _comp_toobjects.py  _configloader.py  _core.py  _def.py  _diagloader.py  _equilibrium.py  _load.py  _mat2ids2calc.py  _plasma2Dloader.py  _utils.py
tofu/inv/: ToFu_PostTreat.py  ToFu_TreatForPostTreat.py
tofu/mag/: .gitignore  __init__.py  _comp_circularcoil.py  equimap.py  magFieldLines.py  mag_ripple.f  modules_INTRA_IRFM.txt  reference.npz  regression_test.py  test_equimap.py  test_magFieldLines.py  test_ripple.py
tofu/matcomp/: ToFu_MatComp.py
tofu/mesh/: Profile.prof  _compute.py  _plot.py  setup.py
tofu/nist2tofu/: __init__.py  _requests.py
tofu/omas2tofu/: __init__.py  _common.py  _core_profiles.py  _ddef.py  _equilibrium.py  _main.py  _utils.py
tofu/openadas2tofu/: __init__.py  _read_files.py  _requests.py
tofu/physics_tools/: __init__.py  _distributions.py  _runaways.py
tofu/scripts/: _def.py  tofucalc.py  tofucustom.py  tofuplot.py  tofuversion.py
tofu/spectro/: Ge_AtomicScatteringFactors_LBL.txt  Ge_AtomicScatteringFactors_NIST.txt  __init__.py  _analysis_tools.py  _fit12d.py  _fit12d_dextract.py  _fit12d_dinput.py  _fit12d_funccostjac.py  _plot.py  _rockingcurve.py  _rockingcurve_def.py  _rockingcurve_tools.py  _spectralrange2d.py
tofu/tests/: __init__.py  earclipping.py  test00_preliminary.py  test_earclipping.py
tofu/tomotok2tofu/: __init__.py  _core.py
tofu/treat/: __init__.py  _compute.py  _core.py  _plot.py
(+1455 files in other folders)
