# inspired from:
# https://github.com/silx-kit/silx/blob/main/pyproject.toml
# https://github.com/ToFuProject/datastock/blob/devel/pyproject.toml


[build-system]
build-backend = 'mesonpy'
requires = [
    'meson-python',
    'cython',
    'numpy',
]


# https://mesonbuild.com/meson-python/how-to-guides/meson-args.html#how-to-guides-meson-args
[tool.meson-python.args]
# setup = [
    # '--vsenv',		# force Visual Studio env
    #'-Doption=false',
    #'-Doptimization=3', 	# Compiler optimization O3
    #'-Dfeature=enabled',
    #'-Dvalue=42',
# ]
compile = ['-j4']
install = ['--tags=bindings']
dist = ['--include-subprojects']



# [tool.cibuildwheel]
# Skip 32-bit builds and PyPy
# skip = ["*-win32", "*-manylinux_i686", "pp*", "*musllinux*"]


[tool.setuptools.cmdclass]
build_py = "_custom_build.build_py"


[tool.cython]
# https://groups.google.com/g/cython-users
cythonize = "_custom_cythonize.cythonize"


[tool.setuptools]
packages = ["tofu", "tofu.tests"]


[tool.setuptools_scm]
version_file = "tofu/_version.py"


[tool.setuptools.dynamic]
classifiers = {file = ["CLASSIFIERS.txt"]}


[project]
name = "tofu"
readme = "README.md"
license = "MIT"
dynamic = ["version", "classifiers"]
description = "TOmography for FUsion toolkit"
authors = [
    {name = "Didier VEZINET", email = "didier.vezinet@gmail.com"},
]
maintainers = [
    {name = "Didier VEZINET", email = "didier.vezinet@gmail.com"},
]
keywords = [
    "tomography", "fusion", "synthetic diagnostic", "diagnostic design", 
]
requires-python = ">=3.8"
dependencies = [
    "numpy<1.25",  # for astropy compatibility vs deprecated np.product
    "scipy",
    "matplotlib",
    # "PySide2 ; platform_system != 'Windows'",
    "spectrally",
]


[project.urls]
source = "https://github.com/ToFuProject/tofu"
Issues = "https://github.com/ToFuProject/tofu/issues"
download = "https://pypi.org/project/tofu/"


[project.entry-points."tofu"]
tofu = "scripts.main:main"


[project.optional-dependencies]
full = [
    'spectrally>=0.0.9', 
]
linting = [
  'tofu[full]',
  'ruff',
]
formatting = [
  'tofu[full]',
  'ruff',
]
doc =[
    'tofu[full]',
    'Sphinx',                    # To build the documentation in doc/
    'sphinx-autodoc-typehints',  # For leveraging Python type hints from Sphinx
    'sphinx-copybutton',         # Add copy to clipboard button to code blocks
    'sphinx-design',             # For tabs and grid in documentation
    'pydata_sphinx_theme',       # Sphinx theme
    'nbsphinx',                  # For converting ipynb in documentation
    'pandoc',                    # For documentation Qt snapshot updates
]
test = [
    'tofu[full]',
    'pytest',                    # For testing
    'pytest-xvfb',               # For GUI testing
    'pytest-cov',                # For coverage
    'pytest-mock',
]
