# For details, see
#   https://docs.python.org/2/distutils/configfile.html
#   https://packaging.python.org/distributing/#manifest-in

[nosetests]
verbosity=2
detailed-errors=1
with-id=T
with-coverage=1
cover-package=nose
where=tofu/tests
nologcapture=T

[options]
setup_requires =
	       setuptools>=18.0
	       cython>=0.26
	       numpy